--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.8"
+    "react-scripts": "^2.1.8",
+    "react-scroll": "^1.7.11",
+    "react-scroll-to-component": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
