--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "node-sass": "^4.12.0",
-    "react": "^16.5.2",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-alert": "^5.5.0",
+    "react-alert-template-basic": "^1.0.0",
     "react-bootstrap": "^1.0.0-beta.8",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.8.6",
+    "react-notify-toast": "^0.5.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
     "react-scroll": "^1.7.11",
